package DuckExample;

public class Fly_At_Less_Height implements FlyBehaviour {

  @Override
  public void fly() {
    System.out.println("I fly at less height");
  }
}
