package DuckExample;

public class QuackQuack implements QuackBehaviour {

  @Override
  public void quack() {
    System.out.println("I do quack quack");
  }
}
