package DuckExample;

public class SqueekSqueek implements QuackBehaviour {

  @Override
  public void quack() {
    System.out.println("I do Squeek Squeek");
  }
}
